Bug#39350 Falcon: Releasing deferred indexes causes crash

- Transactions now bump the reference count for deferred indexes
- Transaction::releaseDeferredIndexes(Table *) now gets exclusive lock on syncDeferredIndexes